Posts Index: Fix alignment of details info

--- a/blender-today/src/sass/main.sass
+++ b/blender-today/src/sass/main.sass
@@ -292,7 +292,6 @@ blockquote
 	position: relative
 	z-index: 1
 	font-size: 0.9em
-	float: left
 	color: lighten($color_text, 30%)
 	padding: 3px 0 15px 0
 	+media-xs
@@ -306,12 +305,12 @@ blockquote
 
 	+media-sm
 		font-size: 0.8em
-		padding-left: 110px
+		padding-left: 170px
 	+media-md
 		font-size: 0.9em
-		padding-left: 110px
+		padding-left: 170px
 	+media-lg
-		padding-left: 115px
+		padding-left: 175px
 
 	& a
 		color: lighten($color_text, 20%)
